kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-game
  labels:
    app: chess-game
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: chess-game
